✨ Se agrega modal a cards de portafolio

--- a/src/data/about.mdx
+++ b/src/data/about.mdx
@@ -1,8 +1,10 @@
-import TexHighlighted from "@atoms/TexHighlighted/TexHighlighted.astro"
+import TexHighlighted from "@atoms/TexHighlighted/TexHighlighted.astro";
 
- Javascript Fan 😍. Always looking for new skills to learn.
+Javascript Fan 😍. Always looking for new skills to learn.
 
-## What sets me apart?
+ ### What sets me apart?
 
-
-<TexHighlighted glow="I genuinely love what I do! 💙" text="I thrive on transforming ideas into unique digital solutions. 💡. My focus goes beyond coding—it’s about creating experiences that captivate and solve real-world problems in innovative ways. 🚀" />
+<TexHighlighted
+  glow="I genuinely love what I do! 💙"
+  text="I thrive on transforming ideas into unique digital solutions. 💡. My focus goes beyond coding—it’s about creating experiences that captivate and solve real-world problems in innovative ways. 🚀"
+/>
